Fix navbar collapse bug

--- a/src/assets/sass/master.sass
+++ b/src/assets/sass/master.sass
@@ -27,8 +27,17 @@
 
 
 @media (max-width: 991px)
-	.front-text
-		height: 15rem
+	.navbar-toggler
+	  border-color: 0
+
+	.navbar-collapse
+	  background-color: #fff
+	  border-radius: 0.5rem
+	  padding: 2rem 3rem
+
+	.navbar-collapse > .navbar-nav > .nav-item > .nav-link
+	  color: #444
+	  margin-left: 0
 
 @media (max-width: 700px)
 	.front-text
